--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 bin/**
 tmp/**
 tmp/**/*
+build/**
 *.tmp
 *.bak
 *.swp
@@ -38,6 +39,8 @@ local.properties
 
 # PDT-specific
 .buildpath
+
+.gradle/**
 
 # --------------- #
 # Studio-specific #
