--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile group: 'ch.qos.logback', name: 'logback-parent', version: '1.2.1'
+	compileOnly "org.projectlombok:lombok:1.16.14"	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
