--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile group: 'ch.qos.logback', name: 'logback-parent', version: '1.2.1'
 	compileOnly "org.projectlombok:lombok:1.16.14"	
+	compile group: 'com.newrelic.agent.java', name: 'newrelic-api', version: '3.36.0'	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
